dropdown for pools

--- a/core/templates/core/tenx/tenxpool_list.html
+++ b/core/templates/core/tenx/tenxpool_list.html
@@ -8,8 +8,8 @@
 <div class="container" style="padding: 0; margin-bottom: 5px;">
     <h4 style="float: left;">Select a pool to view its details</h4>
     <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;" href="{% url 'tenx:pool_create' %}">Add TenxPool</a>
-    <button type="button" class="btn btn-primary  btn-sm" style="float: right; margin-top: 5px; margin-right: 5px;" data-toggle="modal" data-target="#gscForm">
-        Get GSC Submission Form
+    <button type="button" class="btn-secondary btn-sm" style="float: right; margin-top: 5px; margin-right: 5px;" data-toggle="modal" data-target="#gscForm">
+        GSC Submission Form
     </button>
 </div>
 <div class="container" style="background-color: #F5F5F5;">
@@ -57,7 +57,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Please fill out the following information</h5>
+                <h3 class="modal-title" id="exampleModalLabel">Please fill out the following information</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -79,11 +79,9 @@
                     <div class="form-group">
                         <label for="exampleFormControlSelect1">Choose TenX Pool</label>
                         <select class="form-control" id="submitterEmail">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
+                            {% for pool in pools %}
+                            <option>{{ pool }} </option>
+                            {% endfor %}
                         </select>
                     </div>
                 </form>
