--- a/core/templates/core/tenx/tenxpool_list.html
+++ b/core/templates/core/tenx/tenxpool_list.html
@@ -63,22 +63,24 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form action="/pool/gsc_form/">
+                    {% csrf_token %}
+                    {{form}}
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Name</label>
-                        <input type="email" class="form-control" id="submitterName">
+                        <label for="name">Name</label>
+                        <input type="email" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlSelect1">Email</label>
-                        <input type="email" class="form-control" id="submitterEmail">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Today's Date</label>
-                        <input type="email" class="form-control" id="date">
+                        <label for="date">Today's Date</label>
+                        <input type="email" class="form-control">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlSelect1">Choose TenX Pool</label>
-                        <select class="form-control" id="submitterEmail">
+                        <label for="tenxpool">Choose TenX Pool</label>
+                        <select class="form-control">
                             {% for pool in pools %}
                             <option>{{ pool }} </option>
                             {% endfor %}
@@ -88,7 +90,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Submit</button>
+                <button type="sumbit" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
