COLO-1: TenX Submission Form (#123)
* modal for gsc submission form

* dropdown for pools

* started django form

* form logic

* constructing excel

* refactor flow

* template form

* Delete gsc_tenx_submission.xlsx

* fill in form and download

* lint

* undo lint

--- a/core/templates/core/tenx/tenxpool_list.html
+++ b/core/templates/core/tenx/tenxpool_list.html
@@ -2,12 +2,17 @@
 
 {% load staticfiles %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}List of TenX Pools{% endblock %}
 
 {% block body %}
 <div class="container" style="padding: 0; margin-bottom: 5px;">
     <h4 style="float: left;">Select a pool to view its details</h4>
     <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;" href="{% url 'tenx:pool_create' %}">Add TenxPool</a>
+    <button type="button" class="btn-secondary btn-sm" style="float: right; margin-top: 5px; margin-right: 5px;" data-toggle="modal" data-target="#gscForm">
+        GSC Submission Form
+    </button>
 </div>
 <div class="container" style="background-color: #F5F5F5;">
     <div class="table-responsive">
@@ -46,6 +51,30 @@
                 {% endfor %}
             </tbody>
         </table>
+    </div>
+</div>
+
+<div class="modal fade" id="gscForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="exampleModalLabel">Please fill out the following information</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="/tenx/pool/gsc_form/" method="POST">
+                    {% csrf_token %}
+                    {{form|crispy}}
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="sumbit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
