--- a/core/templates/core/tenx/tenxpool_list.html
+++ b/core/templates/core/tenx/tenxpool_list.html
@@ -9,10 +9,8 @@
 {% block body %}
 <div class="container" style="padding: 0; margin-bottom: 5px;">
     <h4 style="float: left;">Select a pool to view its details</h4>
-    <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;" href="{% url 'tenx:pool_create' %}">Add TenxPool</a>
-    <button type="button" class="btn-secondary btn-sm" style="float: right; margin-top: 5px; margin-right: 5px;" data-toggle="modal" data-target="#gscForm">
-        GSC Submission Form
-    </button>
+    <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;" href="{% url 'tenx:pool_create' %}">Add
+        TenxPool</a>
 </div>
 <div class="container" style="background-color: #F5F5F5;">
     <div class="table-responsive">
@@ -28,54 +26,40 @@
                 </tr>
             </thead>
             <tbody>
-                <br/>
+                <br />
                 {% for pool in pools %}
-                    <tr>
-                        <td><a  href="{% url 'tenx:pool_detail' pool.pk %}">{{ pool.pool_name }}</a></td>
-                        <td>{{ pool.construction_location }}</td>
-                        <td>{{ pool.libraries.count }}</td>
-                        <td>{{ pool.tenxsequencing_set.count }}</td>
-                        <td>
-                            {% for sample in pool.get_sample_list%}
-                            {{sample}}
-                            {% endfor %}
-                        </td>
-                        <td>
-                            <div style="float: right; min-width: 69px">
-                                <a href="{% url 'tenx:pool_update' pk=pool.pk %}"style="margin-right: 2px;" ><i class="fa fa-pencil" aria-hidden="true" style="color: orange;"></i> edit</a>
-                                <br>
-                                <a href="{% url 'tenx:pool_delete' pk=pool.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
-                            </div>
-                        </td>
-                    </tr>
+                <tr>
+                    <td><a href="{% url 'tenx:pool_detail' pool.pk %}">{{ pool.pool_name }}</a></td>
+                    <td>{{ pool.construction_location }}</td>
+                    <td>{{ pool.libraries.count }}</td>
+                    <td>{{ pool.tenxsequencing_set.count }}</td>
+                    <td>
+                        {% for sample in pool.get_sample_list%}
+                        {{sample}}
+                        <br>
+                        {% endfor %}
+                    </td>
+                    <td>
+
+                        <a href="{% url 'tenx:pool_update' pk=pool.pk %}" style="margin-right: 2px;">
+                            <i class="fa fa-pencil" aria-hidden="true" style="color: orange;"></i>
+                            edit
+                        </a>
+                        <br>
+                        <a href="{% url 'tenx:pool_delete' pk=pool.pk %}">
+                            <i class="icon-remove-sign" style="color: red"></i>
+                            delete
+                        </a>
+                        <br>
+                        <a href="{% url 'tenx:gsc_form' pk=pool.pk %}">
+                            <i class="icon-download" style="color: blue"></i>
+                            GSC form
+                        </a>
+                    </td>
+                </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </div>
-
-<div class="modal fade" id="gscForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="modal-title" id="exampleModalLabel">Please fill out the following information</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form action="/tenx/pool/gsc_form/" method="POST">
-                    {% csrf_token %}
-                    {{form|crispy}}
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="sumbit" class="btn btn-primary">Submit</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
 {% endblock %}
