chore: add tenx sequencing option

--- a/core/templates/core/tenx/tenxsequencing_list.html
+++ b/core/templates/core/tenx/tenxsequencing_list.html
@@ -8,7 +8,7 @@
 <div class="container" style="padding: 0; margin-bottom: 5px;">
     <h4 style="float: left;">Select a sequencing to view its details</h4>
     <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;"
-        href="{% url 'tenx:sequencing_create' %}">Add TenxPool</a>
+        href="{% url 'tenx:sequencing_create' %}">Add TenX Sequencing</a>
 </div>
 <div class="container" style="background-color: #F5F5F5;">
     <div class="table-responsive">
@@ -68,7 +68,9 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#datatable").DataTable({
-            "order": [[2, "desc"]]
+            "order": [
+                [2, "desc"]
+            ]
         });
     });
 </script>
